# agent-fender

./: .gitignore  AGENT_SAFETY_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent-fender/: SKILL.md
docs/: failure-modes.md
examples/: autogen_agent.py  crewai_agent.py  langgraph_agent.py  minimal_agent.py
references/: audit-examples.md  inline-patterns.md  library-integration.md
skills/agent-fender/: SKILL.md  install.js  package.json
skills/agent-fender/references/: audit-examples.md
src/agent_fender/: __init__.py  _retry.py  approval.py  circuit_breaker.py  config.py  runner.py  safe_llm.py  safe_tool.py
tests/: conftest.py  test_approval.py  test_circuit_breaker.py  test_config.py  test_runner.py  test_safe_llm.py  test_safe_tool.py
