[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-fender"
version = "0.1.0"
description = "Runtime safety guardrails for AI agents: circuit breaker, approval gating, injection detection, dedup, timeout enforcement, and audit trail. Pure functions, zero dependencies."
requires-python = ">=3.10"
dependencies = []
authors = [
    {name = "Carb"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "ai-agent",
    "agent-safety",
    "guardrails",
    "circuit-breaker",
    "langgraph",
    "crewai",
    "autogen",
    "llm",
    "prompt-injection",
    "runtime-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: LangGraph",
    "Framework :: CrewAI",
]

[project.urls]
Homepage = "https://github.com/K-Carb/agent-fender"
Repository = "https://github.com/K-Carb/agent-fender"
Issues = "https://github.com/K-Carb/agent-fender/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
